--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    background-color: rgb(100, 67, 67);
+}
+  
 section#gitKomanda > ul{
     max-width: 80%;
     margin: 30px auto 0;
@@ -5,4 +10,9 @@ section#gitKomanda > ul{
     border-radius: 10px;
     color: white;
     font-size: 1.3rem;
+}
+
+section#gitKomanda > li{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.5;  
 }
